--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- Open Graph for Social Media -->
     <meta property="og:title" content="Kizeop Group – Software Development & IT Solutions">
     <meta property="og:description" content="We provide expert customizable software development services for websites, apps, and digital platforms.">
-    <meta property="og:image" content="https://kizeopgroup.org/your-image.jpg">
+    <meta property="og:image" content="https://kizeopgroup.org/img/LOGO FOR IG (320x320 px).png">
     <meta property="og:url" content="https://kizeopgroup.org">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="Kizeop Group">
@@ -286,8 +286,7 @@
 
 
     <div class="reviews-head-text">
-        <h2>Hear from our customers</h2>
-        <a href="#learn-more" class="learn-more-btn3">See More</a>
+        <h2>Reviews From Our Customers Nation Wide</h2>
     </div>
 
     <section id=" customer-reviews"  class="customer-reviews">
@@ -432,4 +431,6 @@
 
 </footer>
 </html>
+
+
 
