--- a/index.html
+++ b/index.html
@@ -38,7 +38,10 @@
 
 <div id="google_translate_element"></div>
 
-<i class="fa-solid fa-list hamburger" id="hamburger"></i>
+<!-- Custom Hamburger Menu -->
+<div class="hamburger" id="hamburger">
+    <img src="img/menu-icon.png" alt="Menu Icon" class="menu-icon">
+</div>
 
 
 <nav class="menu" id="menu">
